--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <header role = "banner">
+  <h1>Fantasy Quiz App </h1>
+    <h2>How well do you know the places and people of popular fantasy universes?</h2>
+  </header>
+
+  <main class="main content" role="main">
+   <section class ="questions">The questions with optional answers will go here. </section>
+
+   <section class ="answers">Response to the selection "correct or incorrect" with a link to sources.</section>
+
+   <section class ="progress">Simple notation of which question you are on.</section>
+
+   <section class ="status">How many questions they have right, with a jab at low scores and assumptions of cheating if correct.</section>
+  
+  </main>
+
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="index.js"></script>
