--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>Begin the quest to determine if you are worthy to be called a fantasy fan.</p>
 
           <!-----temp link before pages are dynamic----->
-      <button type ="submit" id="js-start"><a href="/questions.html">tart Quiz</a></button> 
+      <button type ="submit" id="js-start"><a href="https://emsmami.github.io/fantasy-quiz-app/questions.html">Start Quiz</a></button> 
       </section>    
     </form>
   </main>
