wireframe less CSS

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
   <header role = "banner">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Star_Wars_Logo.svg" alt="Star Wars Logo">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/Starfleet_logo_circle_black.svg" alt="Star Trek Logo">
-  <img src="https://i.pinimg.com/474x/8e/a0/53/8ea0536141a6df0a4e8d18c351d8d500--elegant-designs-lord-of-the-rings.jpg"  alt="Lord of the Rings Logo">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/MarvelLogo.svg" alt="Marvel Logo">  
+      <img src="" alt="logo 1">
+      <img src="" alt="logo 2">
+      <img src="" alt="logo 3">
+      <img src="" alt="logo 4">  
   </header>
 
   <main class="main content" role="main">
@@ -23,7 +23,7 @@
     <form id ="quizzlet">
       <h1 id="quiz-title">Fantasy Quiz App </h1>
       <section class ="offer-to-start-quiz">
-        <p>Begin the quest to determine if you are worthy to be called a fantasy fan.</p>
+        <p>lorem ipsum</p>
 
           <!-----temp link before pages are dynamic----->
       <button type ="submit" id="js-start"><a href="https://emsmami.github.io/fantasy-quiz-app/questions.html">Start Quiz</a></button> 
