--- a/questions.html
+++ b/questions.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <header role = "banner">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Star_Wars_Logo.svg" alt="Star Wars Logo">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/Starfleet_logo_circle_black.svg" alt="Star Trek Logo">
-        <img src="https://i.pinimg.com/474x/8e/a0/53/8ea0536141a6df0a4e8d18c351d8d500--elegant-designs-lord-of-the-rings.jpg"  alt="Lord of the Rings Logo">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/MarvelLogo.svg" alt="Marvel Logo">  
+        <img src="" alt="logo 1">
+        <img src="" alt="logo 2">
+        <img src="" alt="logo 3">
+        <img src="" alt="logo 4">  
     </header>
               
     <main class="main content" role="main">
@@ -29,10 +29,10 @@
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute 
           irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
     
-          <input type="radio" class="options" name="question1" value="answer1"> Star Wars<br>
-          <input type="radio" class="options" name="question1" value="answer2"> Star Trek<br>
-          <input type="radio" class="options" name="question1" value="answer3"> Lord of the Rings<br>
-          <input type="radio" class="options" name="question1" value="answer4"> Marvel<br>
+          <input type="radio" class="options" name="question1" value="answer1"> answer 1<br>
+          <input type="radio" class="options" name="question1" value="answer2"> answer 2<br>
+          <input type="radio" class="options" name="question1" value="answer3"> answer 3<br>
+          <input type="radio" class="options" name="question1" value="answer4"> answer 4<br>
         </section> 
       <section class ="questions">    
             <!-----temp link before pages are dynamic----->
