added a final score page

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <main class="main content" role="main">
      
     <form id ="quizzlet">
-      <h1 id="quiz-title">Fantasy Quiz App </h1>
+      <h1 id="quiz-title"> Quiz Name </h1>
       <section class ="offer-to-start-quiz">
-        <p>lorem ipsum</p>
+        <p>Offer to start the quiz goes here.</p>
 
           <!-----temp link before pages are dynamic----->
       <button type ="submit" id="js-start"><a href="https://emsmami.github.io/fantasy-quiz-app/questions.html">Start Quiz</a></button> 
