added anchor on button

--- a/feedback.html
+++ b/feedback.html
@@ -39,7 +39,7 @@
         </section> 
       <section class ="questions">  
           <!---- toggles on last item to say 'restart quiz' -->  
-      <button type= "submit" class="next">Next Question</button>
+      <button type= "submit" class="next"><a href="https://emsmami.github.io/fantasy-quiz-app/final-page.html">Next Question</a>a</button>
         </section>
      
     
