--- a/final-page.html
+++ b/final-page.html
@@ -25,8 +25,8 @@
      
    
         <section>
-            <p>You Finished!</p>
-            <p>You got <span class="js-question-percentage">X%</span> correct.</p>
+            <p>You X out 10 questions correct!</p>
+            <p>You achieved a  <span class="js-question-percentage">X%</span></p>
             <p class ="js-response">Commentary on progress goes here.</p>
         </section>
       
