getting JS going

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <form id ="quizzlet">
       <h1 id="quiz-title">Fantasy Quiz App </h1>
       <section class ="offer-to-start-quiz">
-        <p>Begin the quest to determine if you are worthy to be called a fantasy fan.</p>
+        <p>Are you worthy of being called a true fantasy fan?</p>
 
           <!-----temp link before pages are dynamic----->
-      <button type ="submit" id="js-start"><a href="https://emsmami.github.io/fantasy-quiz-app/questions.html">Start Quiz</a></button> 
+      <button type ="submit" id="js-start">Begin Quest</button> 
       </section>    
     </form>
   </main>
