start-to-question

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      
     <form id ="quizzlet">
       <h1 id="quiz-title">Fantasy Quiz App </h1>
-      <section class ="offer-to-start-quiz">
+      <section class ="js-questions offer-to-start-quiz">
         <p>Are you worthy of being called a true fantasy fan?</p>
 
           <!-----temp link before pages are dynamic----->
