--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/MarvelLogo.svg" alt="Marvel Logo">  
   </header>
 
-  <main class="main content" role="main">
+  <main class="content" role="main">
      
     <form id ="quizzlet">
       <h1 id="quiz-title">Fantasy Quiz App </h1>
