--- a/questions.html
+++ b/questions.html
@@ -36,7 +36,7 @@
         </section> 
       <section class ="questions">    
             <!-----temp link before pages are dynamic----->
-      <button type= "submit" class="verify"><a href="https://emsmami.github.io/fantasy-quiz-app/feedback.html">Verify</a></button>
+      <button type= "submit" class="verify">Verify</button>
         </section>
      
     
